--- a/src/components/Navbar/style.module.scss
+++ b/src/components/Navbar/style.module.scss
@@ -8,7 +8,7 @@
     @include directionX;
 
     color: var(--color-text);
-    padding: 1rem;
+    padding: 1rem 2rem;
     align-items: center;
     justify-content: space-between;
     font-size: 1rem;
