--- a/src/layouts/MainLayout/style.module.scss
+++ b/src/layouts/MainLayout/style.module.scss
@@ -1,7 +1,7 @@
 @import '@styles/base';
 
 .layoutWrapper {
-  margin-top: var(--height, '4rem');
+  // margin-top: var(--height, '0');
   width: 100vw;
-  height: calc(100vh - var(--height, '4rem'));
+  height: calc(100vh - var(--height, '0'));
 }
