--- a/src/pages/Home/Section1/style.module.scss
+++ b/src/pages/Home/Section1/style.module.scss
@@ -1,8 +1,11 @@
 @import '@styles/base';
+@include telegraf-400;
+@include telegraf-800;
 
 .Section1Wrapper {
   width: 100%;
   height: 100%;
+  font-family: 'Telegraf';
 
   .Background {
     width: 100%;
@@ -34,7 +37,7 @@
         }
         .Title2 {
           position: relative;
-          margin-top: -2rem;
+          margin-top: 0rem;
           font-size: 2rem;
           font-weight: 700;
           box-sizing: border-box;
