--- a/src/pages/Home/Section2/style.module.scss
+++ b/src/pages/Home/Section2/style.module.scss
@@ -1,8 +1,11 @@
 @import '@styles/base';
+@include telegraf-400;
+@include telegraf-800;
 
 .WrapperSection2 {
   width: 100%;
   height: 80vh;
+  font-family: 'Telegraf';
   background-color: var(--color-bg-2);
   @include directionX;
   background-image: url('../../../static/images/bg-stars.svg');
@@ -35,42 +38,36 @@
       border: 1px solid rgba(229, 186, 115, 0.2);
       box-sizing: border-box;
       padding: 2rem;
-      &.fadeIn {
-        animation: fadeInUpFromLeft 1.5s ease-out;
-      }
     }
 
-    @keyframes fadeInUpFromLeft {
-      0% {
-        opacity: 0;
-        transform: translateX(-20px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateX(0);
-      }
+    .CardAboutMe:hover {
+      background: #a47e3b;
+      color: #5e3e08;
+      transition: background 0.3s ease;
     }
 
     .CardTitle {
-      font-size: 1.2rem;
-      font-weight: 600;
+      font-size: 1.5rem;
+      font-weight: 800;
       margin-bottom: 3rem;
     }
 
     .CardDesc1 {
-      font-size: 0.8rem;
-      font-weight: 500;
+      font-size: 1rem;
+      font-weight: 800;
       text-align: justify;
+      line-height: 1.5rem;
     }
 
     .CardDesc2 {
-      font-size: 0.8rem;
-      font-weight: 500;
+      font-size: 1rem;
+      font-weight: 800;
       text-align: justify;
+      line-height: 1.5rem;
     }
 
     .CardDesc3 {
-      font-size: 0.8rem;
+      font-size: 1rem;
       font-weight: 400;
       position: absolute;
       bottom: 1rem;
