--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,6 @@
 @import './media-mixins.scss';
 @import './color.scss';
 @import './font-poppins.scss';
+@import './font-telegraf.scss';
 @import './layout.scss';
 @import './theme.scss';
