--- a/src/pages/Home/Section3/style.module.scss
+++ b/src/pages/Home/Section3/style.module.scss
@@ -1,8 +1,10 @@
 @import '@styles/base';
+@include telegraf-400;
 
 .Section3Wrapper {
   width: 100%;
   height: 120vh;
+  font-family: 'Telegraf', sans-serif;
   background-color: var(--color-bg-2);
   box-sizing: border-box;
   padding: 1rem;
@@ -20,18 +22,19 @@
   }
 
   .S3Title {
+    font-weight: 800;
     font-size: 2rem;
     color: var(--color-text);
     text-align: center;
     box-sizing: border-box;
-    padding: 1rem;
   }
 
   .S3Title2 {
+    font-weight: 800;
     font-size: 2rem;
     color: var(--color-text);
     text-align: center;
     box-sizing: border-box;
-    padding: 3rem 1rem;
+    padding-top: 5rem;
   }
 }
